# rtl-sdr-scanner-cpp

./: .clang-format  .define.env  .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.run  README.md  build.sh  config.example.json  config.json  docker-compose.yml  entrypoint.sh  rebuild.sh
.github/workflows/: build-release.yml  main.yml
cmake/: FindRTLSDR.cmake
entrypoint/: entrypoint.sh  entrypoint_run.sh  run.sh
scripts/: converter.py
sdrplay/: SDRplay_RSP_API-Linux-3.15.2.run  SDRplay_RSP_API-aarch64-3.07.run  SDRplay_RSP_API-armv7l-3.07.run  SDRplay_RSP_API-x86_64-3.07.run
sources/: config.cpp  config.h  config_migrator.cpp  config_migrator.h  core_manager.cpp  core_manager.h  logger.cpp  logger.h  main.cpp  mp3_writer.cpp  mp3_writer.h  notification.h  performance_logger.cpp  performance_logger.h  ring_buffer.cpp  ring_buffer.h  scanner.cpp  scanner.h  utils.cpp  utils.h  version.h
sources/algorithms/: decimator.cpp  decimator.h  fft.cpp  fft.h  fftw_initializer.cpp  fftw_initializer.h  fm_demodulator.cpp  fm_demodulator.h  noise_learner.cpp  noise_learner.h  signal_mediator.cpp  signal_mediator.h  spectrogram.cpp  spectrogram.h  torn_signals_detector.cpp  torn_signals_detector.h  torn_transmission_detector.cpp  torn_transmission_detector.h  transmision_detector.cpp  transmision_detector.h  transmission_detector.cpp  transmission_detector.h
sources/network/: data_controller.cpp  data_controller.h  mqtt.cpp  mqtt.h  radio_controller.cpp  radio_controller.h  remote_controller.cpp  remote_controller.h  websocket_server.cpp  websocket_server.h  websocket_server_listener.cpp  websocket_server_listener.h  websocket_server_session.cpp  websocket_server_session.h
sources/radio/: averager.cpp  averager.h  buffer.cpp  buffer.h  connection.cpp  connection.h  connector.h  hackrf_sdr_device.cpp  hackrf_sdr_device.h  help_structures.cpp  help_structures.h  raw_file.cpp  raw_file.h  recorder.cpp  recorder.h  recorder_worker.cpp  recorder_worker.h  recording_controller.cpp  recording_controller.h  rtl_sdr_device.cpp  rtl_sdr_device.h  rtl_sdr_scanner.cpp  rtl_sdr_scanner.h  samples_processor.cpp  samples_processor.h  samples_processor_worker.cpp  samples_processor_worker.h  sdr_device.cpp  sdr_device.h  sdr_device_reader.cpp  sdr_device_reader.h  sdr_scanner.cpp  sdr_scanner.h  signal.cpp  signal.h  signals_matcher.cpp  signals_matcher.h  soapy_sdr_device.cpp  soapy_sdr_device.h
sources/radio/blocks/: average_x.cpp  average_x.h  average_y.cpp  average_y.h  blocker.cpp  blocker.h  buffer.h  callback.h  decimator.cpp  decimator.h  file_sink.cpp  file_sink.h  noise_learner.cpp  noise_learner.h  psd.cpp  psd.h  sdr_source.cpp  sdr_source.h  spectrogram.cpp  spectrogram.h  transmission.cpp  transmission.h
sources/scanners/: help_structures.cpp  help_structures.h  recorder.cpp  recorder.h  rtl_sdr_scanner.cpp  rtl_sdr_scanner.h
sources/utils/: collection_utils.h  radio_utils.cpp  radio_utils.h  utils.cpp  utils.h
tests/: test_averager.cpp  test_collection_utils.cpp  test_core_manager.cpp  test_main.cpp  test_radio_utils.cpp  test_ring_buffer.cpp  test_signal_mediator.cpp  test_utils.cpp
waterfall live/: index.html
waterfall live/js/: colormap.js  script.js  spectrum.js
waterfall store/: main.py  requirements.txt
